tests/testfiles/passing/invalid_identifiers/keyword_as_id_do.c
/* Keyword as identifier: do */
int main() {
    int do;
}